--- a/src/pages/ProfilePage/ProfileDashboard/ProfileDashboard.module.scss
+++ b/src/pages/ProfilePage/ProfileDashboard/ProfileDashboard.module.scss
@@ -44,9 +44,7 @@
 }
 
 @media screen and (width <= 1000px) {
-  body {
-    #rootpage {
-      overflow-x: clip;
-    }
+  div[class^='generalWrapper'] {
+    overflow-x: clip;
   }
 }
